--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,35 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "./theme.css";
-
 @layer base {
-	html {
-		font-family: "Poppins", sans-serif;
-	}
+  html {
+    font-family: "Poppins", sans-serif;
+  }
 
-	* {
-		transition: background-color 0.3s;
-	}
+  * {
+    transition: background-color 0.3s;
+  }
 
-	h1 {
-		@apply text-h1;
-	}
+  h1 {
+    @apply text-h1;
+  }
 
-	h2 {
-		@apply text-h2;
-	}
+  h2 {
+    @apply text-h2;
+  }
 
-	h3 {
-		@apply text-h3;
-	}
-	.prose-theme {
-		@apply prose;
-	}
+  h3 {
+    @apply text-h3;
+  }
 
-	@media (prefers-color-scheme: dark) {
-		.prose-theme {
-			@apply prose-invert;
-		}
-	}
+  [data-theme="light"] {
+    --base-background: 250 250 250;
+    --base-background-level1: 240 240 240;
+    --base-background-level2: 210 210 210;
+    --base-background-invert: 0 0 0;
+    --base-background-hover: 220 220 220;
+    --base-foreground: 50 50 50;
+    --base-foreground-invert: 246 246 246;
+    --base-foreground-dim: 86 86 86;
+    --base-highlight: purple;
+  }
+
+  [data-theme="light"] .prose-theme {
+    @apply prose;
+  }
+
+  [data-theme="dark"] {
+    --base-background: 36 36 36;
+    --base-background-level1: 50 50 50;
+    --base-background-level2: 70 70 70;
+    --base-background-invert: 246 246 246;
+    --base-background-hover: 90 90 90;
+    --base-foreground: 220 220 220;
+    --base-foreground-invert: 36 36 36;
+    --base-foreground-dim: 188 188 188;
+    --base-highlight: yellow;
+  }
+
+  [data-theme="dark"] .prose-theme {
+    @apply prose prose-invert;
+  }
 }
